[package]
name = "maven"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.4.0"
http = "0.2.4"
lambda_runtime = "0.3.0"
log = "0.4.14"
simple_logger = "1.11.0"
tokio = "1.6.1"
hyper = "0.14"
hyper-tls = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.5.1"